refactor F-PLN data structures

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -488,6 +488,14 @@ $display-mfd-dark-grey: #3c3c3c;
   align-items: center;
 }
 
+.MFDFplnSpecialLine {
+  border: 2px solid transparent;
+}
+
+.MFDFplnSpecialLine:hover {
+  border: 2px solid $display-cyan;
+}
+
 .MFDFplnLineAnnotation {
   height: 32px;
   text-align: right;
