fixed up metric alt and corrected init screen

--- a/fbw-a32nx/src/systems/instruments/src/ISIS/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/ISIS/style.scss
@@ -8,6 +8,10 @@
   font-style: normal;
 }
 
+.SelfTest {
+  font-family: "Ecam", monospace !important;
+}
+
 .ISIS {
   position: absolute;
   width: 512px;
