Move Navigraph client to fbw-common, introduce AMDB API support, port OANC to AMDB API

--- a/fbw-a32nx/src/systems/instruments/src/OANC/styles.scss
+++ b/fbw-a32nx/src/systems/instruments/src/OANC/styles.scss
@@ -120,6 +120,7 @@
 
 .oanc-position {
   padding: 1px;
+  padding-left: 2px;
   border: solid 1.5px $display-yellow;
   color: $display-yellow;
   font-size: 24px;
