--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/msg_list.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/msg_list.scss
@@ -1,11 +1,11 @@
 ﻿@import "../../../MsfsAvionicsCommon/definitions";
 
-.msgListElementContainer {
+.mfd-msg-list-element-container {
   margin: 75px;
   border-top: 2px solid white;
 }
 
-.MFDLabel.msgListElement {
+.mfd-label.msg-list-element {
   font-size: 26px;
   height: 80px;
   padding: 5px;
