--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/oans.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/oans.scss
@@ -10,7 +10,7 @@
 
 $display-mfd-dark-grey: #3c3c3c;
 
-.OANSInfoBox {
+.oans-info-box {
   background-color: $display-mfd-dark-grey;
   border: 2px outset $display-light-grey;
   padding: 9px 12px 5px 12px;
