--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/init.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/init.scss
@@ -1,35 +1,35 @@
 ﻿@import "../../../MsfsAvionicsCommon/definitions";
 
-.initLine {
+.mfd-fms-init-line {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 5px;
 }
 
-.initLine.initSecondLine {
+.mfd-fms-init-line.second-line {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.initLine.initAltnRte {
+.mfd-fms-init-line.altn-rte {
   border-bottom: 1px solid lightgrey;
   margin-bottom: 25px;
   padding-bottom: 25px;
 }
 
-.initLine.initTripWind {
+.mfd-fms-init-line.trip-wind {
   border-bottom: 1px solid lightgrey;
   margin-bottom: 15px;
   padding-bottom: 35px;
 }
 
-.MFDLabel.initInputFieldLabel {
+.mfd-label.init-input-field {
   width: 150px;
   text-align: right;
   padding-right: 5px;
 }
 
-.MFDLabel.initSpaceLR {
+.mfd-label.init-space-lr {
   margin: 0px 10px 0px 10px;
 }
